Libs/NotifyIconLibCpp/NotifyIconLib.hpp

typedef void (*callback_function_guid)(const char* guid);
typedef void (*callback_function_uint)(const char* guid, UINT id_item);
extern "C" DLL void CreateNotifyIcon(const char* guid, HICON hIcon);
extern "C" DLL void DeleteNotifyIcon(const char* guid);
extern "C" DLL void SetIcon(const char* guid, HICON hIcon);
extern "C" DLL void SetMenuItems(const char* guid, int count, MenuItem * items[]);
extern "C" DLL void SetTooltip(const char* guid, const wchar_t* tooltip);
extern "C" DLL void SetVisibility(const char* guid, BOOL visible);
extern "C" DLL void SetChecked(const char* guid, UINT id, BOOL checked);
extern "C" DLL void SetEnabled(const char* guid, UINT id, BOOL enabled);
extern "C" DLL void SetCallback_IconClick(callback_function_guid callback);
extern "C" DLL void SetCallback_ItemClick(callback_function_uint callback);